assets/css/styles.css
/* ... */
#checkout-personal-information-step.checkout-step [style="display: none;"] + #checkout-guest-form{
    @apply block;
}


/* product-desc-right-box - on product page right bar */
.product-desc-right-box {
    @apply tablet:ml-[60px];
}

.product-desc-right-box  .ApColumn .block{
    @apply mb-0;
}

.product-desc-right-box  .ApColumn:not(:first-child) .block{
    @apply mb-[40px] tablet:pl-[20px];
}

.product-desc-right-box .ApColumn .title_block{
    @apply font-header mb-[15px] tablet:mb-5 text-xl font-normal italic normal-case text-main-dark;
}

.product-desc-right-box  .ApColumn:first-child .title_block{
    @apply font-body font-normal mb-[40px] text-[20px] not-italic;
}

.product-desc-right-box .ApImage img{
    @apply bg-gray-1000 rounded-[5px] w-full h-auto max-w-[60px] max-h-[60px] p-[7px];
}

.product-desc-right-box .ApImage .image_description p{
    @apply font-body font-light text-[14px] tablet:text-base text-main-dark;
}


.product-description h2{
    @apply font-body normal-case text-base tablet:text-[20px] font-normal not-italic;
}

.product-description p{
    @apply font-body text-[14px] tablet:text-base;
}



.easypack-widget .map-widget .leaflet-popup .leaflet-popup-content-wrapper .point-wrapper p{
    @apply font-body text-white;
}

.carrier-extra-content .gmparcellocker-button p{
    @apply font-body
}

.carrier-extra-content .gmparcellocker-button button{
    @apply bg-transparent border-2 border-main-dark border-solid font-body font-normal hover:bg-main-dark hover:text-white px-6 py-3 rounded-full text-main-dark text-sm transition uppercase whitespace-nowrap
}


.payment-options .additional-information p{
    @apply font-body text-main-dark;
}

.condition-label .js-terms a{
    @apply font-medium transition;
}

#order-summary-content #order-items .collapsed i{
    @apply rotate-0;
}

#checkout-summary-step .reassurance div{
    @apply border-b-0;
}

.view-leo-dropdown-additional.show i {
    @apply transform rotate-180 translate-y-0;
}

.view-leo-dropdown-additional.show{
    @apply bg-white;
}

#criterions_list .cancel{
    @apply hidden;
}

div.star.star_on:before, div.star.star_hover:before{
    content: "\f005";
    @apply text-main;
}

.star:before{
    content: "\f006";
    @apply text-main;
}

.item-link:hover img{
    filter: invert(17%) sepia(49%) saturate(5868%) hue-rotate(328deg) brightness(101%) contrast(93%) grayscale(0);
}

.item-link img{
    filter: invert(17%) sepia(49%) saturate(5868%) hue-rotate(328deg) brightness(101%) contrast(93%) grayscale(1);
    @apply h-12 w-12 mb-2 transition-all duration-200;
}

.page-customer-account .lql-social-login a, .page-customer-account .form-control-submit{
    @apply ml-auto;
}

tr.show .view-wishlist-product i{
    @apply text-main
}

.title-on-image{
    @apply transform group-hover:scale-110;
}

.page-product .product-description ul{
    @apply mt-5;
}

.page-product .product-description ul li{
    @apply marker:text-main text-sm tablet:text-base text-main-dark font-light mb-3;
}

.page-category .container > .row{
    @apply border-0 border-b border-solid border-gray-1000 tablet:mb-5;
}


.product-add-to-cart .add button svg{
    @apply top-1/4 left-1/2 -ml-[14px] transition duration-200 transform absolute
}
.product-add-to-cart .add button span{
    @apply block duration-200 py-3 top-0 transition w-full transform
}

.product-add-to-cart .add button.adding{
    @apply bg-main-hover
}
.product-add-to-cart .add button.adding span{
    @apply -translate-y-full
}
.product-add-to-cart .add button.adding svg{
    @apply translate-y-12
}

.product-add-to-cart .add button.added span{
    @apply -translate-y-full
}
.product-add-to-cart .add button.added svg{
    @apply opacity-100 translate-y-0
}

